--- a/home.html
+++ b/home.html
@@ -8,13 +8,13 @@
 <body>
     <style>
         body{
-            background-image: url("./WhatsApp\ Image\ 2024-10-26\ at\ 19.44.16_6d6bf6c0.jpg");
+            background-image: url("./back2.jpg");
         }
     </style>
     </head>
     IMI
     <center>
-        <h1 style="color: brown;">PORTFOLIO</h1>
+        <h1 style="color: rgba(8, 7, 8, 0.945);">PORTFOLIO</h1>
     </center>
     <center>
     <img src="./satya.jpg" height="200PX" width="200PX">
