--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
     <button><a href="./anjili.html">ABOUT</a></button>
     <img src="./vijju.jpg" height="200PX" width="200PX">
     <button><a href="./vijju.html">ABOUT</a></button><pre></pre>
-    <img src="./AASI.jpg" height="200PX" width="200PX">
+    <img src="./aasi1354.jpg" height="200PX" width="200PX">
     <button><a href="./aasi.html">ABOUT</a></button>
     <img src="./PAVI.jpg" height="200PX" width="200PX">
     <button><a href="./pavi.html">ABOUT</a></button>
